--- a/index.html
+++ b/index.html
@@ -1,104 +1,122 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>The Wonderful World of Stephanie!</title>
-  <style>
-    #Website-Header {
-      background-color: rgb(255, 125, 147);
-      font-family: Arial, Helvetica, sans-serif;
-      width: fit-content;
-    }
-    
-    #welcome-page {
-      font-family: Arial, Helvetica, sans-serif;
-      width: fit-content;
-    }
-
-    /* CSS to flip the image */
-    .flipped {
-      transform: scaleX(-1);
-    }
-
-    #stephanies-dumb-diary-comix-heading {
-      font-family: Arial, Helvetica, sans-serif;
-      width: fit-content;
-    } 
-
-    #emmanuels-rollercoaster-heading {
-      font-family: Arial, Helvetica, sans-serif;
-      width: fit-content;
-    } 
-
-    h1 {
-        color: darkviolet;
-        font-size: xx-large;
-        font-weight: 900;
-    }
-
-    h2 {
-        color: darkviolet;
-        font-size: x-large;
-        font-weight: 600;
-    }
-
-    body {
-          background-color: peachpuff;
-          font-size: medium;
-          font-weight: bold;
-    }
-
-    .paragraph-text {
-      color: rgb(33, 0, 47);
-      font-family: Arial, Helvetica, sans-serif;
-      width: fit-content;
-    } 
-  </style>
-</head>
-<body>
-
-  <header>
-    <div id="Website-Header"><h1>Welcome To Stephanie's World!</h1>
-    <nav>
-      <ul>
-        <li><a href="#welcome page">Welcome To My Blog</a></li>
-        <li><a href="#stephanies dumb diary comix">Stephanie's Dear Dumb Diary Comix</a></li>
-        <li><a href="#emmanuels rollercoaster">Children's Book: Emmanuel's Rollercoaster</a></li>
-      </ul>
-    </nav>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Unity WebGL Player | Dear Dumb Blog</title>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/style.css">
+  </head>
+  <body>
+    <div id="unity-container" class="unity-desktop">
+      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+      <div id="unity-loading-bar">
+        <div id="unity-logo"></div>
+        <div id="unity-progress-bar-empty">
+          <div id="unity-progress-bar-full"></div>
+        </div>
+      </div>
+      <div id="unity-warning"> </div>
+      <div id="unity-footer">
+        <div id="unity-webgl-logo"></div>
+        <div id="unity-fullscreen-button"></div>
+        <div id="unity-build-title">Dear Dumb Blog</div>
+      </div>
     </div>
-  </header>
+    <script>
 
-  <main>
-    <section id="welcome page">
-      <h2 id="welcome-page">Welcome To My Blog!</h2>
-      <!-- Flipped image using CSS class -->
-     <img src="Brown_Skinned_Buttercup_.png" alt="Flipped Image" class="flipped" width="400">
-    </section>
+      var container = document.querySelector("#unity-container");
+      var canvas = document.querySelector("#unity-canvas");
+      var loadingBar = document.querySelector("#unity-loading-bar");
+      var progressBarFull = document.querySelector("#unity-progress-bar-full");
+      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+      var warningBanner = document.querySelector("#unity-warning");
 
-    <section id="stephanies dumb diary comix">
-      <h2 id="stephanies-dumb-diary-comix-heading">Stephanie's Dear Dumb Diary Comix</h2>
-      <img src="Why I Should Stop Smoking Diary Comic.jpg" width="400">
-      <img src="Vancouver Diary Comic.jpg" width="400">
-      <img src="Practicing Cursing Out White Supremacists Diary.jpg" width="400">
-    </section>
-  </main>
+      // Shows a temporary message banner/ribbon for a few seconds, or
+      // a permanent error message on top of the canvas if type=='error'.
+      // If type=='warning', a yellow highlight color is used.
+      // Modify or remove this function to customize the visually presented
+      // way that non-critical warnings and error messages are presented to the
+      // user.
+      function unityShowBanner(msg, type) {
+        function updateBannerVisibility() {
+          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+        }
+        var div = document.createElement('div');
+        div.innerHTML = msg;
+        warningBanner.appendChild(div);
+        if (type == 'error') div.style = 'background: red; padding: 10px;';
+        else {
+          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+          setTimeout(function() {
+            warningBanner.removeChild(div);
+            updateBannerVisibility();
+          }, 5000);
+        }
+        updateBannerVisibility();
+      }
 
-    <section id="emmanuels rollercoaster">
-      <h2 id="emmanuels-rollercoaster-heading">Children's Book: Emmanuel's Rollercoaster</h2>
-      <img src="EmmanuelsRollercoasterProductImage.jpg">
-      <p class="paragraph-text">Emmanuel's Rollercoaster opens the door of possibility as Emmanuel's wacky sister, 
-        Stephanie, takes it upon herself to do the unthinkable. Build a rollercoaster for her brother. 
-        This book plays with absurdity and wonder and gives the reader a pathway to escape the mundane.</p>
-      <a href="https://www.amazon.ca/Emmanuels-Rollercoaster-Enter-world-sisters/dp/1778168620/ref=sr_1_1?crid=L8Q5Y59AH3MK&keywords=emmanuels+rollercoaster&qid=1704821830&sprefix=emmanuels+rollercoaster%2Caps%2C90&sr=8-1"> 
-        <button>Buy Book!</button>
-      </a>
-    </section>
+      var buildUrl = "Build";
+      var loaderUrl = buildUrl + "/Website Shit.loader.js";
+      var config = {
+        dataUrl: buildUrl + "/Website Shit.data.br",
+        frameworkUrl: buildUrl + "/Website Shit.framework.js.br",
+        codeUrl: buildUrl + "/Website Shit.wasm.br",
+        streamingAssetsUrl: "StreamingAssets",
+        companyName: "DefaultCompany",
+        productName: "Dear Dumb Blog",
+        productVersion: "1.0",
+        showBanner: unityShowBanner,
+      };
 
-  <footer>
-    <p>&copy; 2023 My Website</p>
-  </footer>
+      // By default, Unity keeps WebGL canvas render target size matched with
+      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
+      // Set this to false if you want to decouple this synchronization from
+      // happening inside the engine, and you would instead like to size up
+      // the canvas DOM size and WebGL render target sizes yourself.
+      // config.matchWebGLToCanvasSize = false;
 
-</body>
+      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+        // Mobile device style: fill the whole browser client area with the game canvas:
+
+        var meta = document.createElement('meta');
+        meta.name = 'viewport';
+        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+        document.getElementsByTagName('head')[0].appendChild(meta);
+        container.className = "unity-mobile";
+        canvas.className = "unity-mobile";
+
+        // To lower canvas resolution on mobile devices to gain some
+        // performance, uncomment the following line:
+        // config.devicePixelRatio = 1;
+
+
+      } else {
+        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
+
+        canvas.style.width = "960px";
+        canvas.style.height = "600px";
+      }
+
+      loadingBar.style.display = "block";
+
+      var script = document.createElement("script");
+      script.src = loaderUrl;
+      script.onload = () => {
+        createUnityInstance(canvas, config, (progress) => {
+          progressBarFull.style.width = 100 * progress + "%";
+              }).then((unityInstance) => {
+                loadingBar.style.display = "none";
+                fullscreenButton.onclick = () => {
+                  unityInstance.SetFullscreen(1);
+                };
+              }).catch((message) => {
+                alert(message);
+              });
+            };
+
+      document.body.appendChild(script);
+
+    </script>
+  </body>
 </html>
-
